--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">PerfumeRecommendedService</string>
+    <string name="test_warning_btn_left_text">아니요</string>
+    <string name="test_warning_btn_right_text">네</string>
 </resources>
