--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,17 @@
     <string name="app_name">PerfumeRecommendedService</string>
     <string name="test_warning_btn_left_text">아니요</string>
     <string name="test_warning_btn_right_text">네</string>
+    <string name="match">매칭율 %d%%</string>
+    <string name="api_error">통신이 원활하지 않습니다. 잠시 후 다시 시도해주세요.</string>
+
+    <string name="login_warning_title">로그인 하시겠습니까?</string>
+    <string name="login_warning_like">스크랩 기능은\n로그인이 필요합니다.</string>
+    <string name="login_warning_btn_left_text">아니요</string>
+    <string name="login_warning_btn_right_text">네</string>
+
+    <string name="perfume_note">PERFUME NOTE</string>
+    <string name="perfume_description">PERFUME DESCRIPTION</string>
+
+    <string name="perfume_recommendation">향수 추천 결과 %d</string>
+
 </resources>
